--- a/style.css
+++ b/style.css
@@ -59,3 +59,42 @@ background: repeating-linear-gradient(0deg, rgb(108, 155, 0) 0%, rgb(108, 155, 0
   box-shadow: 0px 0px 2px black;
   border-radius: 50%;
 }
+.btn-container{
+  display: none;
+}
+.btn-container button{
+  margin: 5px;
+  color: whitesmoke;
+}
+.btn-container .btndown{
+  margin-left: 20px !important;
+}
+@media (max-width:576px) {
+  #board{
+    width: 95vmin;
+    height: 95vmin;
+  }
+  .body{
+    background: url(snake.png);
+    min-height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    position: relative;
+    }
+    #score,#highscore{
+      position: absolute;
+      top: 88%;
+      font-size: 20px;
+    }
+    #highscore{
+      top: 92%;
+      color: rgb(231, 229, 229);
+    }
+    .btn-container{
+      display: block;
+    }
+}
